--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -31,6 +31,7 @@ body {
 }
 
 .ticker-card {
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,6 +44,10 @@ body {
   font-size: 20px;
   background-color: white;
   font-size: 16px;
+}
+
+.ticker-card.selected {
+  background-color: rgb(184, 255, 178);
 }
 
 .ticker-card img {
